Fix dark mode for Outline Tags
Summary:
Replace hardcoded background color `#fff` with variable `{$page.content}` on `.phui-tag-view.phui-tag-type-outline`.

Refs T15056

Test Plan:
* Go http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Enable Prototype applications via `./bin/config set phabricator.show-prototypes true`
* Install UIExamples via http://phorge.localhost/applications/view/PhabricatorUIExamplesApplication/
* Go to http://phorge.localhost/uiexample/view/PHUITagExample/ and scroll down to the "Outlines" section
* Alternatively, configure some task subtypes at http://phorge.localhost/config/edit/maniphest.subtypes/ and look at the top of a Maniphest task

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26160

--- a/webroot/rsrc/css/phui/phui-tag-view.css
+++ b/webroot/rsrc/css/phui/phui-tag-view.css
@@ -458,7 +458,7 @@ a.phui-tag-view:hover.phui-tag-disabled .phui-tag-core {
 }
 
 .phui-tag-view.phui-tag-type-outline .phui-tag-core {
-  background: #fff;
+  background: {$page.content};
   padding: 0 6px 1px 6px;
 }
 
